<resources>
    <string name="app_name">NewsFeedApp</string>
    <string name="category">category</string>
    <string name="title">title</string>
    <string name="story">story</string>
    <string name="no_news">There are no news for you now. You can always come back later and read the latest news.</string>
    <string name="no_internet_access">No internet access. Check your connection.</string>
    <string name="date">07.04.2018 12:00</string>
    <string name="trailText">Some random text</string>
    <string name="author">author</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>


    <string name="settings_select_topic_label">Select Topic</string>
    <string name="settings_select_topic_key" translatable="false">select_topic</string>
    <string name="settings_select_topic_default" translatable="false">@string/settings_select_topic_travel_value</string>

    <string name="settings_select_topic_travel_label">Travel</string>
    <string name="settings_select_topic_travel_value" translatable="false">travel</string>

    <string name="settings_select_topic_fashion_label">Fashion</string>
    <string name="settings_select_topic_fashion_value" translatable="false">fashion</string>

    <string name="settings_select_topic_politics_label">Politics</string>
    <string name="settings_select_topic_politics_value" translatable="false">politics</string>

    <string name="settings_select_topic_sport_label">Sport</string>
    <string name="settings_select_topic_sport_value" translatable="false">sport</string>

    <string name="settings_select_topic_business_label">Business</string>
    <string name="settings_select_topic_business_value" translatable="false">business</string>


    <string name="settings_min_articles_label">Minimum Articles</string>
    <string name="settings_min_articles_key" translatable="false">min_articles</string>
    <string name="settings_min_articlese_default" translatable="false">10</string>

</resources>
