<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/news_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        tools:text="@string/category"
        android:layout_gravity="start" />

    <TextView
        android:id="@+id/news_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/secondaryText"
        android:textSize="12sp"
        tools:text="@string/date" />

    <TextView
        android:id="@+id/news_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/secondaryText"
        android:textSize="12sp"
        android:textStyle="italic"
        tools:text="@string/author" />

    <TextView
        android:id="@+id/news_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryText"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/news_trail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/secondaryText"
        android:textSize="14sp"
        android:textStyle="italic"
        tools:text="@string/trailText" />

</LinearLayout>